# Robosample

./: .gitattributes  .gitignore  .gitmodules  1  CMakeLists.txt  CMakeLists_pgo.txt  Definitions.Molmodel.cmake  Definitions.OpenMM.cmake  Definitions.Simbody.cmake  README.md  Robosample.drill.code-workspace  Robosample.nonb.code-workspace  build.sh  build.txt  build_custom_1st_time.sh  build_custom_draft.sh  build_custom_draft_2.sh  build_custom_make_all.sh  build_custom_make_only.sh  build_custom_regenerate_all.sh  build_debug.sh  build_openmm.sh  build_release.sh  build_robo.sh  cmake-variants.yaml  cmake_regenerateAll.sh  install.bash  molecular.yaml  mytime.py  out.txt  partial_build_release.sh  rage.ali  robosample.drawio  tickets.txt
build-release/: CMakeCache.txt  Makefile  ana.bash  calc.bash  cmake_install.cmake  gdb.out  inp.ala1w  inp.ala1w.01  inp.ala1w.05  inp.ala1w.1  inp.ala1w.10  inp.ala1w.2  inp.ala1w.3  inp.ala1w.6  inp.aper  inp.mla  inp.mla1w  inp.test  ke.out  make.out  out  out.01  out.05  out.1  out.10  out.2  out.3  out.6  out.txt  sign.out  simulate.py  x
build-release/2but/: ligand.td.flex
build-release/MLAmono/: ligand.inpcrd  ligand.prmtop
build-release/NMAFlexFiles/: receptor.Mode0.Scaled.flex  receptor.Mode1.Scaled.flex  receptor.Mode2.Scaled.flex  receptor.Mode3.Scaled.flex  receptor.Mode4.Scaled.flex
build-release/ala1/: ligand.all.flex  ligand.flex.2ball  ligand.flex.2cyl  ligand.flex.2td  ligand.flex.5ap  ligand.flex.5ball  ligand.flex.7ball  ligand.flex.7cyl  ligand.flex.7td  ligand.flex.8ball  ligand.flex.ball  ligand.flex.ball.8  ligand.flex.ballF  ligand.flex.ballM  ligand.flex.ballnoH  ligand.flex.bat  ligand.flex.bigbodies  ligand.flex.cart  ligand.flex.cart.8  ligand.flex.cyl  ligand.flex.free.works  ligand.flex.freeline  ligand.flex.lineorientation  ligand.flex.lineorientation.all  ligand.flex.slider  ligand.flex.td  ligand.flex.universal  ligand.inpcrd  ligand.td.flex.01  ligand.td.flex.05  ligand.td.flex.1  ligand.td.flex.10  ligand.td.flex.2  ligand.td.flex.3  ligand.td.flex.6  ligand.trans.rst7  ligand.up.rst7
build-release/ala1trans/: ligand.flex.7td  ligand.flex.ball  ligand.flex.cart  ligand.flex.cyl  ligand.flex.free  ligand.flex.free.complete  ligand.flex.pin  ligand.prmtop  ligand.rst7  ligand.up.rst7
build-release/aper/: ligand.equil.rst7  ligand.min.rst7
build-release/robots/: log.1
build-release/src/: Makefile  cmake_install.cmake
build-release/temp/: log.1  log.9991  log.9999
build-release/tests/: Makefile  TestAmberInput  TestBallLongPendulum  TestMatrix  TestOpenMMBasic  TestParallelExecutor  TestSetupReader  TestSimbodyBasic  TestTopology  TestWorldReconstruction  TestWriteDCD  (+1 more)
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  inp
cmake_modules/: FindOpenMM.cmake  FindSimbody.cmake
datasets/: 1APQ_correlations.npy
doc/: CMakeLists.txt  Doxyfile.in
gui/: RIG_Release.py
include/: ConformationalSearch.hpp  Context.hpp  ElementCache.hpp  FixmanTorque.hpp  GirolamiSampler.hpp  HMCSOA.hpp  HMCSampler.hpp  InternalCoordinates.hpp  LAHMCSampler.hpp  MonteCarloSampler.hpp  ParaMolecularDecorator.hpp  Random.hpp  Replica.hpp  Robo.hpp  Sampler.hpp  SetupReader.hpp  TaskSpace.hpp  ThermodynamicState.hpp  Topology.hpp  World.hpp  bBond.hpp  bSpecificAtom.hpp  bgeneral.hpp  readAmberInput.hpp  server.hpp  simmain.hpp  stdafx.h
pch/: molmodel_pch.h  openmm_pch.h  robosample_pch.h  simbody_pch.h
rage/: rage.fps.0.prmtop  rage.fps.0.rst7  rage.fps.1.rst7  rage.fps.2.prmtop  rage.fps.2.rst7  rage.fps.3.prmtop  rage.fps.3.rst7  rage.fps.4.prmtop  rage.fps.4.rst7  rage.fps.5.rst7  rage.fps.6.prmtop  rage.fps.6.rst7  rage.fps.7.rst7  rage.fps.8.prmtop  rage.fps.8.rst7  rage.fps.9.prmtop  rage.fps.9.rst7
src/: .Context.cpp.swo  .HMCSampler.cpp.swp  CMakeLists.txt  CMakeLists_pgo.txt  ConformationalSearch.cpp  Context.cpp  ElementCache.cpp  FixmanTorque.cpp  GirolamiSampler.cpp  HMCSOA.cpp.Eigen  HMCSampler.cpp  HamiltonianMonteCarloSampler.cpp  IState.cpp  InternalCoordinates.cpp  LAHMCSampler.cpp  MonteCarloSampler.cpp  MyState.cpp  ParaMolecularDecorator.cpp  PyBind11.cpp  Random.cpp  Replica.cpp  Robosample.cpp  Sampler.cpp  SetupReader.cpp  TaskSpace.cpp  ThermodynamicState.cpp  Topology.cpp  TrivalentAtomTetra.cpp  World.cpp  World.cpp.bkp  bArgParser.cpp  bBond.cpp  bSpecificAtom.cpp  bgeneral.cpp  readAmberInput.cpp  simmain.cpp
src/format/: PDBObject.cpp  TrajectoryObject.cpp  dcdplugin.c
tests/: CMakeLists.txt  CMakeLists_pgo.txt  Robosample.cpp  TestAmberInput.cpp  TestAmberReader.cpp  TestBAT.cpp  TestCB8.cpp  TestEnergy.cpp  TestFixmanTorqueSim.cpp  TestGeometry.cpp  TestMassSqrt.cpp  TestMassSqrtAndDet.cpp  TestMatrix.cpp  TestParallelExecutor.cpp  TestSampler.cpp  TestSetupReader.cpp  TestSimbodyBasic.cpp  TestTest.cpp  TestWater.cpp  TestWorldReconstruction.cpp  test-memory.sh
tests-old/: CMakeLists.txt  OpenmmReader.py  TestAmberInput.cpp  TestBallLongPendulum.cpp  TestFixmanTorqueSim.cpp  TestMolmodelBasic.cpp  TestOpenMMBasic.cpp  TestSampler.cpp  TestTopology.cpp  TestWriteDCD.cpp
tests-old/lin4/: ligand.prmtop.ini
tests/lin4/: ligand.inpcrd  ligand.prmtop
tests_inputs/: inp  inp.1w.both  inp.1w.nonbond  inp.2but  inp.2but.dual  inp.2but.mono  inp.2mols  inp.ala10  inp.ala10.md  inp.aper  inp.aper.pgo  inp.e2un  inp.mla  inp.wat.cartesian  inp.wat.slider01  inp.wat.slider01.bs02  out  pgo.sh  simulate.py
tools/: ANTECHAMBER_BOND_TYPE.AC0  ANTECHAMBER_GAS.AC  ANTECHAMBER_GAS_AT.AC  ATOMTYPE.INF  Autocorrelation.py  PREP.INF  Robo.py  VMDFlexVisualizer.tcl  analyze.py  analyzeTraj.py  analyzeTraj01.py  autocorFuncs.py  batstat.py  docking_generate.py  docking_simulate.py  flexibilities.txt  flexor.py  flexor_example.py  fps.amber.mol2  fps.frcmod  fps.mol2  fps.prepi  getAllBonds.py  getFlexibilities.py  jumpDetect.py  logAnalyzer.py  ls_parsetxt.py  minimize.py  model.py  molecular.yaml  openmm_hmc.py  openmm_simulate.py  plot.py  presimulate.py  process_flex.py  rage-3cjj.ali  rage.D00000001  rage.V99990001  rage.ali  rage.capped.amber.h_renum.txt  (+16 more)
(+772 files in other folders)
